[package]
name = "yahoo_finance_api"
version = "2.1.0"
authors = [
  "Mark Beinker <mwb@quantlink.de>",
  "Claus Matzinger <claus.matzinger+kb@gmail.com>",
]
edition = "2018"
description = "A rust adapter for the yahoo! finance API to fetch histories of market data quotes."
license = "MIT OR Apache-2.0"
repository = "https://github.com/xemwebe/yahoo_finance_api"
readme = "README.md"
keywords = ["finance", "yahoo", "stock", "quote"]
categories = ["api-bindings"]
include = ["src/**/*", "LICENSE-*", "README.md"]

[dependencies]
wreq = { version = "6.0.0-rc.20", features = ["cookies"] }
wreq-util = { version = "3.0.0-rc.5", features = ["emulation-rand"] }
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
thiserror = "1.0"
time = { version = "0.3", features = ["macros"] }
select = "0.6"
log = "0.4"
tokio = { version = "1.39", features = ["sync"] }
regex = "1.11.1"
rand = "0.9.0"
maybe-async = "0.2.10"

[dev-dependencies]
tokio-test = "0.4"
tokio = { version = "1.39", features = ["macros", "rt-multi-thread", "sync"] }
env_logger = "0.11.8"
